[package]
name = "Relink"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-service = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_Services",
    "Win32_System_Com",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
]

[build-dependencies]
winres = "0.1"
